feat: 添加 78 张塔罗牌图片资源并更新 reading/index 页面加载逻辑

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
   </main>
 
-  <script src="scripts/transition.js"></script>
+  <script src="./scripts/transition.js"></script>
   <script>
     // 星空背景（简版）
     (function(){
